# Vendor-Platform

./: .gitignore  README.md  package-lock.json  package.json
alembic/: env.py
app/api/v1/endpoints/: health.py  vendors.py  work_requirements.py
app/config/: settings.py
app/models/: base.py  work_requirement.py
app/repository/: base.py  vendor.py  work_requirement.py
app/schemas/: report.py  work_requirement.py
app/services/: work_requirement.py
apps/backend/: README.md  pyproject.toml
apps/backend/alembic/versions/: 4a0f7d7e0e28_initial_tables.py  b1a2c3d4e5f6_add_deleted_at.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: recommendations.py
apps/backend/app/database/: connection.py
apps/backend/app/models/: __init__.py  document.py  vendor.py
apps/backend/app/repository/: document.py
apps/backend/app/schemas/: common.py  document.py  vendor.py
apps/backend/app/services/: ai.py  recommendation.py  vendor.py
apps/backend/app/utils/: logger.py
apps/backend/app/workers/: queue.py
apps/web/: .env.example  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/vendors/: page.tsx
apps/web/src/app/vendors/new/: page.tsx
apps/web/src/app/work-requirements/: page.tsx
apps/web/src/components/: RecommendationsPanel.tsx  ui.tsx
apps/web/src/components/forms/: VendorForm.tsx  WorkRequirementForm.tsx
apps/web/src/lib/: api-client.ts  types.ts
apps/web/src/lib/hooks/: recommendations.ts  vendors.ts  work-requirements.ts
(+4 files in other folders)
