[project]
name = "vendor-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.5",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "pgvector>=0.4.2",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "python-multipart>=0.0.32",
    "google-genai>=2.10.0",
    "email-validator>=2.3.0",
]
